fixed searchbar on small screen

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -162,15 +162,16 @@ nav ul a {
 
 .input-field label.right, .input-field input[type=search]+label {
   right:0;
-  left: 80%;
+  left: 90%;
   transition: all 0.4s;
   height: 100%;
   top:0;
+  width:4rem;
 }
 
 .input-field input[type=search] {
-  padding-left: 2rem;
-  width: calc(100% - 2rem);
+  padding-left: 3rem;
+  width: calc(100% - 3rem);
 }
 
 .input-field:hover label.right, .input-field input[type=search]:focus+label {
@@ -398,6 +399,32 @@ a.profile {
   nav .logo {
     height:50px;
   }
+
+  .row.search {
+    top:56px;
+    left:0;
+    width:unset;
+    background:white;
+    height:70px;
+  }
+
+  .input-field label.right, .input-field input[type=search]+label {
+    right:200px;
+    left: 0;
+  }
+
+  .input-field input[type=search].hidden {
+    opacity: 1;
+  }
+
+  .parallax-container.hero-container {
+    top: calc(70px - 40px) !important;
+  }
+
+  main.watch-search {
+    padding-top: calc(64px + 70px);
+  }
+
 }
 
 @media only screen and (max-width:719px) {
